[gd_scene load_steps=3 format=3 uid="uid://neagtykblwvx"]

[ext_resource type="Script" uid="uid://nnm0psdcxc3d" path="res://scenes/hit-area/hit_area.gd" id="1_74npl"]
[ext_resource type="Texture2D" uid="uid://cp7mtxs570cuo" path="res://assets/strike.png" id="3_7ppw6"]

[node name="HitArea" type="Area2D"]
z_index = 5
script = ExtResource("1_74npl")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="StrikeSprite" type="Sprite2D" parent="."]
visible = false
z_index = 10
texture = ExtResource("3_7ppw6")

[node name="StrikeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
ignore_time_scale = true

[connection signal="timeout" from="StrikeTimer" to="." method="_on_strike_timer_timeout"]
